# Tic-Tac

./: README.md  db.sqlite3  pyproject.toml
base/: settings.py  urls.py
home/: models.py  urls.py  views.py
home/migrations/: 0001_initial.py
home/templates/: game.html  game_board.html
home/templates/home/: home.html
static/css/: style.css
static/js/: script.js  script.py
templates/: base.html
